--- a/config/crd/bases/crd.chenshaowen.com_pipelineruns.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_pipelineruns.yaml
@@ -73,6 +73,10 @@ spec:
                   properties:
                     name:
                       type: string
+                    results:
+                      additionalProperties:
+                        type: string
+                      type: object
                     taskRef:
                       type: string
                     taskRunStatus:
