--- a/config/crd/bases/crd.chenshaowen.com_tasks.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_tasks.yaml
@@ -58,6 +58,7 @@ spec:
                     localfile:
                       type: string
                     name:
+                      pattern: ^[a-z](-?[a-z0-9])*$
                       type: string
                     remotefile:
                       type: string
