--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,10 +2,27 @@ apiVersion: v1
 entries:
   ops:
   - apiVersion: v2
-    appVersion: 1.0.0
+    appVersion: 3.0.0
     created: "2024-11-07T14:32:37.05352+08:00"
     description: A Helm chart for Ops
-    digest: 4d4c8443ccabed7ac7f1486d24f7396123665e6ab7db76f1d514c4cbc7dc5a05
+    digest: ""
+    home: https://www.chenshaowen.com/ops
+    icon: https://www.chenshaowen.com/ops/logo.png
+    maintainers:
+    - email: mail@chenshaowen.com
+      name: shaowenchen
+    name: ops
+    sources:
+    - https://github.com/shaowenchen/ops
+    type: application
+    urls:
+    - https://www.chenshaowen.com/ops/charts/ops-3.0.0.tgz
+    version: 3.0.0
+  - apiVersion: v2
+    appVersion: 2.0.0
+    created: "2024-11-07T14:32:37.05352+08:00"
+    description: A Helm chart for Ops
+    digest: 
     home: https://www.chenshaowen.com/ops
     icon: https://www.chenshaowen.com/ops/logo.png
     maintainers:
@@ -18,3 +35,20 @@ entries:
     urls:
     - https://www.chenshaowen.com/ops/charts/ops-2.0.0.tgz
     version: 2.0.0
+  - apiVersion: v2
+    appVersion: 1.0.0
+    created: "2024-11-07T14:32:37.05352+08:00"
+    description: A Helm chart for Ops
+    digest: ""
+    home: https://www.chenshaowen.com/ops
+    icon: https://www.chenshaowen.com/ops/logo.png
+    maintainers:
+    - email: mail@chenshaowen.com
+      name: shaowenchen
+    name: ops
+    sources:
+    - https://github.com/shaowenchen/ops
+    type: application
+    urls:
+    - https://www.chenshaowen.com/ops/charts/ops-1.0.0.tgz
+    version: 1.0.0
