--- a/config/crd/bases/crd.chenshaowen.com_pipelines.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_pipelines.yaml
@@ -48,6 +48,8 @@ spec:
                   properties:
                     allowFailure:
                       type: boolean
+                    desc:
+                      type: string
                     name:
                       pattern: ^[a-z](-?[a-z0-9])*$
                       type: string
