--- a/config/crd/bases/crd.chenshaowen.com_pipelines.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_pipelines.yaml
@@ -43,6 +43,8 @@ spec:
                 description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                   Important: Run "make" to regenerate code after modifying this file'
                 type: string
+              runtimeImage:
+                type: string
               tasks:
                 items:
                   properties:
@@ -59,6 +61,8 @@ spec:
                       type: object
                     runAlways:
                       type: boolean
+                    runtimeImage:
+                      type: string
                     taskRef:
                       type: string
                     variables:
