--- a/charts/ops/crds/crd.chenshaowen.com_taskruns.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_taskruns.yaml
@@ -54,6 +54,8 @@ spec:
                 description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                   Important: Run "make" to regenerate code after modifying this file'
                 type: string
+              runtimeImage:
+                type: string
               taskRef:
                 type: string
               variables:
