--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Copy Helm Charts
         run: |
           wget https://github.com/shaowenchen/ops/raw/refs/heads/v1.0/charts/ops-1.0.0.tgz -O ./charts/ops-1.0.0.tgz
-          wget https://github.com/shaowenchen/ops/raw/refs/heads/v1.2/charts/ops-1.2.0.tgz -O ./charts/ops-1.2.0.tgz
+          wget https://github.com/shaowenchen/ops/raw/refs/heads/v1.1/charts/ops-1.1.0.tgz -O ./charts/ops-1.1.0.tgz || true
           mkdir -p ./docs/_book/charts
           cp ./charts/*.tgz ./docs/_book/charts/
           cp ./charts/artifacthub-repo.yml ./docs/_book/charts/
