--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 entries:
   ops:
   - apiVersion: v2
-    appVersion: 1.3.0
+    appVersion: 1.2.0
     created: "2025-12-23T13:15:11.00000Z"
     description: A Helm chart for Ops
     digest: ""
@@ -16,13 +16,13 @@ entries:
     - https://github.com/shaowenchen/ops
     type: application
     urls:
-    - https://www.chenshaowen.com/ops/charts/ops-1.3.0.tgz
-    version: 1.3.0
+    - https://www.chenshaowen.com/ops/charts/ops-1.2.0.tgz
+    version: 1.2.0
   - apiVersion: v2
-    appVersion: 1.2.0
-    created: "2025-12-23T13:14:11.00000Z"
+    appVersion: 1.1.0
+    created: "2025-12-23T13:13:11.00000Z"
     description: A Helm chart for Ops
-    digest: 
+    digest: ""
     home: https://www.chenshaowen.com/ops
     icon: https://www.chenshaowen.com/ops/logo.png
     maintainers:
@@ -33,8 +33,8 @@ entries:
     - https://github.com/shaowenchen/ops
     type: application
     urls:
-    - https://www.chenshaowen.com/ops/charts/ops-1.2.0.tgz
-    version: 1.2.0
+    - https://www.chenshaowen.com/ops/charts/ops-1.1.0.tgz
+    version: 1.1.0
   - apiVersion: v2
     appVersion: 1.0.0
     created: "2024-11-07T14:32:37.05352+08:00"
