--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,14 +2,18 @@ name: Release
 
 on:
   schedule:
-    - cron: '0 0 * * 0'
+    - cron: "0 0 * * 0"
   workflow_dispatch:
     inputs:
       branch_name:
-        description: 'Branch name (e.g., main, v1.0, v1.1)'
+        description: "Branch name"
         required: true
         type: string
         default: main
+        options:
+          - main
+          - v1.1
+          - v1.0
 
 jobs:
   update-tag:
@@ -33,7 +37,7 @@ jobs:
           # Remove leading and trailing whitespace
           BRANCH_NAME=$(echo "${BRANCH_NAME}" | xargs)
           echo "branch_name=${BRANCH_NAME}" >> $GITHUB_OUTPUT
-          
+
           if [ "${BRANCH_NAME}" == "main" ]; then
             TAG_NAME="latest"
           else
@@ -122,7 +126,7 @@ jobs:
           # Remove leading and trailing whitespace
           BRANCH_NAME=$(echo "${BRANCH_NAME}" | xargs)
           echo "branch_name=${BRANCH_NAME}" >> $GITHUB_OUTPUT
-          
+
           if [ "${BRANCH_NAME}" == "main" ]; then
             TAG_NAME="latest"
           else
@@ -165,13 +169,13 @@ jobs:
         run: |
           TAG_NAME="${{ steps.branch.outputs.tag_name }}"
           BRANCH_NAME="${{ steps.branch.outputs.branch_name }}"
-          
+
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          
+
           # Delete local tag if exists
           git tag -d "$TAG_NAME" 2>/dev/null || true
-          
+
           # Create or update tag
           git tag -a "$TAG_NAME" -m "Release $TAG_NAME from branch $BRANCH_NAME" HEAD
           git push origin "$TAG_NAME" --force
