--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
       branch_name:
         description: "Branch name"
         required: true
-        type: string
+        type: choice
         default: main
         options:
           - main
