--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,8 +10,21 @@ on:
         required: false
         default: "linux/amd64,linux/arm64"
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - project: ops-server
+            dockerfile: Dockerfile-Server
+            tag: latest
+          - project: ops-controller-manager
+            dockerfile: Dockerfile
+            tag: latest
+          - project: ops-cli
+            dockerfile: Dockerfile-Cli
+            tag: latest
+      fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - name: Login to DockerHub
@@ -29,36 +42,14 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build and push Controller
+      - name: Build and push ${{ matrix.project }}
         uses: docker/build-push-action@v6
         with:
           platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
           push: true
-          tags: docker.io/shaowenchen/ops-controller-manager:latest
-          file: Dockerfile
-      - name: Push ops-controller-manager to aliyun
+          tags: docker.io/shaowenchen/${{ matrix.project }}:${{ matrix.tag }}
+          file: ${{ matrix.dockerfile }}
+      - name: Push ${{ matrix.project }} to aliyun
         run: |
-          export image=ops-controller-manager:latest
-          docker run --rm -v ~/.docker/config.json:/auth.json quay.io/skopeo/stable copy docker://shaowenchen/${image} docker://registry.cn-beijing.aliyuncs.com/opshub/shaowenchen-${image} --dest-authfile /auth.json --insecure-policy --src-tls-verify=false --dest-tls-verify=false --retry-times 5 --all
-      - name: Build and push Server
-        uses: docker/build-push-action@v6
-        with:
-          platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
-          push: true
-          tags: docker.io/shaowenchen/ops-server:latest
-          file: Dockerfile-Server
-      - name: Push ops-server to aliyun
-        run: |
-          export image=ops-server:latest
-          docker run --rm -v ~/.docker/config.json:/auth.json quay.io/skopeo/stable copy docker://shaowenchen/${image} docker://registry.cn-beijing.aliyuncs.com/opshub/shaowenchen-${image} --dest-authfile /auth.json --insecure-policy --src-tls-verify=false --dest-tls-verify=false --retry-times 5 --all
-      - name: Build and push Cli
-        uses: docker/build-push-action@v6
-        with:
-          platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
-          push: true
-          tags: docker.io/shaowenchen/ops-cli:latest
-          file: Dockerfile-Cli
-      - name: Push ops-cli to aliyun
-        run: |
-          export image=ops-cli:latest
+          export image=${{ matrix.project }}:${{ matrix.tag }}
           docker run --rm -v ~/.docker/config.json:/auth.json quay.io/skopeo/stable copy docker://shaowenchen/${image} docker://registry.cn-beijing.aliyuncs.com/opshub/shaowenchen-${image} --dest-authfile /auth.json --insecure-policy --src-tls-verify=false --dest-tls-verify=false --retry-times 5 --all
